# solucky-contract

./: Anchor.toml  README.md
programs/solucky/: Cargo.toml
programs/solucky/src/: account.rs  constants.rs  error.rs  lib.rs  utils.rs
tests/: solucky.ts
