[package]
name = "solucky"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solucky"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
blake3 = "1.5.1"
bytemuck = "1.15.0"
constant_time_eq = "0.3.0"
solana-program = "=1.18.10"
toml_datetime = "0.6.5"
winnow = "0.6.5"
